# GTASA-GlossHook-Demo

./: README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/Text/: japanese.gxt
app/src/main/assets/Textures/fonts/: JapaneseFont.met
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/GlossDemo/: CMakeLists.txt  main.cpp  main.h
app/src/main/java/com/epicgames/ue4/: GameApplication.java
app/src/main/java/com/nvidia/devtech/: NvEventQueueActivity.java  NvUtil.java
app/src/main/java/com/pairip/application/: Application.java
app/src/main/java/com/rockstargames/gtasa/: GTASA.java
app/src/main/java/com/rockstargames/gtasa/data/: SettingPref.java
app/src/main/java/com/rockstargames/gtasa/ui/: MainActivity.java
app/src/main/java/com/wardrumstudios/utils/: Helpers.java  WarBase.java  WarGamepad.java  WarMedia.java
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
dyso/: build.gradle  proguard-rules.pro
dyso/src/main/java/com/pika/sillyboy/: DynamicLoad.kt  DynamicSo.java  DynamicSoLauncher.kt  DysoApplication.java  DysoG.java
dyso/src/main/java/com/pika/sillyboy/constant/: Constant.java
dyso/src/main/java/com/pika/sillyboy/elf/: Dynamic32Structure.java  Dynamic64Structure.java  Elf.java  Elf32Header.java  Elf64Header.java  ElfParser.java  Program32Header.java  Program64Header.java  Section32Header.java  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
(+13 files in other folders)
